--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lecture8-Libs</string>
     <string name="user_name_hint">User name or id</string>
     <string name="get_user">Get User</string>
+    <string name="get_group">Get Group</string>
 </resources>
